WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
270609
WKInactiveSchedulingPolicyThrottle / WKInactiveSchedulingPolicyNone may still cause process suspension
https://bugs.webkit.org/show_bug.cgi?id=270609
Summary
WKInactiveSchedulingPolicyThrottle / WKInactiveSchedulingPolicyNone may still...
Chris Dumez
Reported
2024-03-06 16:50:38 PST
WKInactiveSchedulingPolicyThrottle / WKInactiveSchedulingPolicyNone may still cause process suspension. They don't set the "shouldDropNearSuspendedAssertionAfterDelay" setting, which means that we may end up dropping the suspended assertion after some delay and the processes would suspend, even though the API indicates that the processes will not suspend in those modes.
Attachments
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2024-03-06 16:50:48 PST
<
rdar://123854747
>
Chris Dumez
Comment 2
2024-03-06 16:52:18 PST
Pull request:
https://github.com/WebKit/WebKit/pull/25558
EWS
Comment 3
2024-03-07 14:32:48 PST
Committed
275807@main
(f64effb7bba9): <
https://commits.webkit.org/275807@main
> Reviewed commits have been landed. Closing PR #25558 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug