WKInactiveSchedulingPolicyThrottle / WKInactiveSchedulingPolicyNone may still cause process suspension https://bugs.webkit.org/show_bug.cgi?id=270609 rdar://123854747

Reviewed by Ben Nham.

WKInactiveSchedulingPolicyThrottle / WKInactiveSchedulingPolicyNone may still
cause process suspension. They don't set the "shouldDropNearSuspendedAssertionAfterDelay"
setting, which means that we may end up dropping the suspended assertion after
some delay and the processes would suspend, even though the API indicates that
the processes will not suspend in those modes.

* Source/WebKit/UIProcess/API/Cocoa/WKPreferences.mm:
(-[WKPreferences setInactiveSchedulingPolicy:]):

Canonical link: https://commits.webkit.org/275807@main